tests/NormalTests/paczka1/fuzzy1/49021332.err
Error in line 3: A470 A470 54,3
Error in line 9: A470 S91 6,1
Error in line 10: oPN60d S91 11,8
Error in line 15: AZx1ao7bzC S91 76,5
Error in line 11: A470 A470 28,7
